--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -52,6 +52,8 @@ dd {
 	background-color: #bca383;
 	border-radius: 4px;
 	box-shadow: 3px 3px 5px #aaa;
+	padding: 4px;
+	text-align: justify;
 }
 
 .tip img {
