--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,8 +15,13 @@ header {
 	margin-bottom: 5px;
 }
 
-ul li {
-	display: inline;
+h2 {
+	margin-bottom: 0px;
+}
+
+nav {
+	margin-top: 3px;
+	margin-bottom: 10px;
 }
 
 dl {
